fixed footer. fixed main-nav and sub-nav. basic color

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 				
 			<div class="nav-container">
 				<!-- Nav bar -->
-				<ul class="main-nav">
+				<ul id="main-nav" class="main-nav">
 					<li id="home" class="main-tab main-active">
 						<a href="javascript:void(0)" onclick="main_nav('home');">Home</a>
 					</li>
